*** 20011204_20 by androsyn
Make configure stop checking for -lnsl as it is no longer needed..


*** 20011204_19 by db
- oops. returned passwd instead of oper_reason for oper_reason



*** 20011204_18 by db
- closer to whats needed



*** 20011204_17 by androsyn
Added Id tags to these files..



*** 20011204_16 by androsyn
Resolved a minor issue with locals shadowing globals.


*** 20011204_15 by androsyn
Fix a minor compile warning.


*** 20011204_14 by androsyn
Fixed minor compile issue.  I'm pretty sure this is the right fix


*** 20011204_13 by db
- put the | in the wrong place on a write



*** 20011204_12 by db
- added separate oper_reason to struct ConfItem. I got tired of the BS



*** 20011204_11 by androsyn
Added the cname_count crap to support classes in-addr resolution.


*** 20011204_10 by androsyn
Cleaned up some stuff.  Got rid of the leaking dns queries as well.


*** 20011204_9 by androsyn
Change malloc to MyMalloc


*** 20011204_8 by androsyn
Added the 0.0.0.0 to 127.0.0.1 hack



*** 20011204_7 by db
- I couldn't take the attach_Iline vs. attach_iline any more



*** 20011204_6 by androsyn
Oops..forgot a LIST_*


*** 20011204_5 by androsyn
Going to need libadns linked in to do something useful with that there
fangled thing


*** 20011204_4 by androsyn
It be nice if I committed adns.c into the tree


*** 20011204_3 by db
- don't show hidden | comments in active kill *duh*



*** 20011204_2 by androsyn
Added some of the standard adns/ documents into the tree, just to give
credit to the original author of adns who wrote such a nice resolver
library.



*** 20011204_1 by androsyn
Fixed depend wackiness 


*** 20011203_7 by androsyn
that should be adns.c not adns.o


*** 20011203_6 by androsyn
Fix some macro clashes


*** 20011203_5 by androsyn
changed my location in this..the adns/ crap is a pretty big change :P


*** 20011203_4 by androsyn
These are the changes to kill res.c dead.



*** 20011203_3 by androsyn
Added all the goodies for adns/


