@@ -1,1 +1,1 @@
-#define SERIALNUM "20011204_20"
+#define SERIALNUM "20011206_2"
