@@ -1,3 +1,11 @@
+*** 20011206_2 by leeh
+- commited the knock stuff.. 
+
+
+*** 20011206_1 by androsyn
+Fixed the /rehash dns core dump.
+
+
 *** 20011204_20 by androsyn
 Make configure stop checking for -lnsl as it is no longer needed..
 
